# mcp-manticore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  fastmcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
mcp_manticore/: __init__.py  docs_fetcher.py  main.py  manticore_prompt.py  mcp_env.py  mcp_server.py
tests/: conftest.py  test_docs_fetcher.py  test_mcp_env.py  test_mcp_server.py
